# crc

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
include/: CRC_Check.h  crc.h
scripts/: crc_check.py
src/: CRC_Check.c  crc.c
